@@ -5,6 +5,7 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 Version 6.6.2 - not yet released
 * infoboxes
   - ensure that the unit symbol is visible
+  - fix ballast display in vario gauge (#2911)
 * tasks
   - update all settings after task type change
 * devices
